terraform-aws-ocp-baremetal/aws-vpc.tf
# Create VPC
resource "aws_vpc" "openlab_vpc" {
  cidr_block       = var.vpc_cidr
  instance_tenancy = "default"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = var.aws_vpc_name
  }
}
